<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:padding="8dp"
    android:background="@drawable/mhbackground">

    <ImageView
        android:id="@+id/image_monster_mh4u"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/loading_shape"
        tools:ignore="ContentDescription" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_margin="16dp">
        
        <TextView
            android:id="@+id/mh4u_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english_name"
            android:textSize="13sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/mh4u_jp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/japanese_name"
            android:textSize="13sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/mh4u_fr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/french_name"
            android:textSize="13sp"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>