<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@drawable/background">


    <Button
        android:id="@+id/button2"
        android:layout_width="119dp"
        android:layout_height="123dp"
        android:background="@drawable/tigrex"
        android:text="@string/Button2_Name"
        android:textColor="@color/color2GenButton"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.754"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

        <Button
            android:id="@+id/button1"
            android:layout_width="119dp"
            android:layout_height="123dp"
            android:background="@drawable/rathalos"
            android:text="@string/Button1_Name"
            android:textColor="@color/color1GenButton"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.226"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.59" />


    <TextView
        android:id="@+id/SousTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/bestiaire_complet"
        android:textColor="@color/colorTitle"
        android:textSize="27sp"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="182dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        app:layout_constraintBottom_toBottomOf="@id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.090"
        app:srcCompat="@drawable/monster_hunter"
        tools:ignore="ContentDescription,MissingConstraints" />

    <Button
        android:id="@+id/button4"
        android:layout_width="119dp"
        android:layout_height="123dp"
        android:background="@drawable/gore_magala"
        android:text="@string/Button4_Name"
        android:textColor="@color/color4GenButton"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.754"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.932" />


    <Button
        android:id="@+id/button3"
        android:layout_width="119dp"
        android:layout_height="123dp"
        android:background="@drawable/lagiacrus"
        android:text="@string/Button3_Name"
        android:textColor="@color/color3GenButton"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.932" />



</android.support.constraint.ConstraintLayout>